# STCFG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CFGAnalysis.hpp  FunctionInfo.hpp  GlobalStatus.hpp  Init.hpp  Result.hpp  SemanticAnalysis.hpp
src/: CFGAnalysis.cpp  Init.cpp  SemanticAnalysis.cpp  main.cpp
